<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalActivity"
    android:orientation="vertical"
    android:gravity="center">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gidLabel"
        android:layout_width="250dp"
        android:layout_height="250dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finishLabel"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/finishingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoringLabel"
        android:textSize="24sp"
        android:layout_marginTop="60dp"/>

    <Button
        android:id="@+id/reSolveButton"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/perfecto"
        android:text="@string/reSolve" />


</LinearLayout>